--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         }
     ],
     "require": {
-        "spicepay/spicepay-php": "3.*"
+        "spicepay/spicepay-php": "1.*",
+        "magento/framework": ">=100.1.0"
     },
     "autoload": {
         "files": [ "registration.php" ],
