--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "spicepay/magento2-plugin",
     "type": "magento2-module",
     "description": "Bitcoin and Altcoin Payment Gateway for Magento 2 via SpicePay",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "keywords": [
       "spicepay",
       "bitcoin",
@@ -28,6 +28,7 @@
         }
     ],
     "require": {
+        "spicepay/spicepay-php": "1.*",
     },
     "autoload": {
         "files": [ "registration.php" ],
