--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         }
     ],
     "require": {
-        "spicepay/spicepay-php": "1.*",
+        "spicepay/spicepay-php": "1.*"
     },
     "autoload": {
         "files": [ "registration.php" ],
